# gbcemu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: install_ci_dependencies.sh  install_test_dependencies.sh
src/: address_space.rs  audio.rs  cartridge.rs  cpu.rs  emulator.rs  frame_tracker.rs  gui.rs  initialization.rs  io_registers.rs  lib.rs  machine.rs  main.rs  options.rs  ppu.rs  registers.rs  rom.rs  save_file.rs
src/cpu/: mod.rs  registers.rs
src/gui/: debugger_view.rs  menu.rs  mod.rs  shell.rs  utils.rs  vram_view.rs
src/mbc/: mbc.rs  mbc1.rs  mbc3.rs  mod.rs  no_mbc.rs  types.rs
tests/: mod.rs  utils.rs
