[package]
name = "gbcemu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
concat-idents = "1.1.5"

# GUI libraries
eframe = { version = "0.33.0", features = ["persistence"] }
muda = "0.17.1"

# Audio libraries
rodio = "0.21.1"

# Serialization libraries
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
typetag = "0.2.21"
